# entoli-rs

./: Cargo.toml  README.md
benches/: benchmark.rs  from_fn_bench.rs  in_place_bench.rs  state_machine_bench.rs
examples/: fib.rs  greet.rs
src/: const_iterator.rs  functor.rs  hkt.rs  iterable.rs  lib.rs  misc.rs  prelude.rs  tree.rs  websocket.rs
src/base/: hkt.rs  misc.rs  mod.rs
src/business/: account.rs  accounting.rs  mod.rs  ocs.rs  period.rs  task.rs  transaction.rs
src/control/: concurrent.rs  mod.rs  monad.rs
src/data/: applicative.rs  functor.rs  io.rs  iter.rs  mod.rs  monad.rs  monoid.rs  option.rs  tree.rs
src/extention/: http_client.rs  mod.rs  process.rs
src/system/: io.rs  mod.rs  process.rs
