[package]

name = "entoli"
version = "0.1.0"
authors = ["Chanwoo Ahn <cwahn0904@gmail.com>"]
edition = "2021"
description = "A functional programming library inspired by haskell."
license = "MIT"
readme = "README.md"
repository = "https://github.com/cwahn/entoli-rs.git"
keywords = ["rust", "functional programming", "haskell"]
categories = ["category1", "category2"]

[dependencies]
num-traits = "0.2"
chrono = "0.4"