[package]

name = "entoli"
version = "0.1.1"
authors = ["Chanwoo Ahn <cwahn0904@gmail.com>"]
edition = "2021"
description = "A functional programming library inspired by haskell."
license = "MIT"
readme = "README.md"
repository = "https://github.com/cwahn/entoli-rs.git"
keywords = ["rust", "functional", "haskell", "prelude", "fp"]
categories = ["algorithms", "data-structures"]

[dependencies]
num-traits = "0.2"
chrono = "0.4"
reqwest = { version = "0.11", optional = true, features = ["blocking", "cookies"] }
tungstenite = { version = "0.15", optional = true }
url = { version = "2.2", optional = true }

[features]
default = []
http_client = ["reqwest"]
websocket = ["tungstenite", "url"]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false